--- a/css/accordion.css
+++ b/css/accordion.css
@@ -27,6 +27,11 @@
   margin-left: 0;
   text-indent: 0;
 }
+.ac-container label[for="4"]{
+  height: 4em;
+  text-indent: -1em;
+  padding-left: 2em;
+}
 .ac-container label > span {
   margin: 0 1em;
 }
