--- a/css/hc.css
+++ b/css/hc.css
@@ -88,6 +88,7 @@ p
 
 label{
   margin-left: 5px;
+  vertical-align: top;
 }
 
 fieldset{
@@ -97,6 +98,7 @@ fieldset{
 input{
   vertical-align: middle;
   margin-bottom: 1.5em;
+  width: 5em;
 }
 
 input[type="submit"]{
@@ -777,6 +779,17 @@ box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
   float: left;
   text-align: center;
   font-weight: bold;
+}
+
+table th {
+  text-align: center;
+}
+
+p.ref {
+  clear: both;
+  font-size: 10px;
+  font-style: italic;
+  color: grey;
 }
 
 #result {
