--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -43,11 +43,7 @@
         {% endif %}
 				{% endfor %}
 				</ul>
-			{% endfor %}    <hr />
-    <!-- {% for lab in site.data.labo %}
-      <a class="pharma" target="_blank" href="{{lab.url}}">
-        <img src="{{ lab.image }}" alt="{{lab.name}}" />
-      </a>
-    {% endfor %} -->
+			{% endfor %}
+      <hr/>
   </ul>
 </div>
