--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,14 @@
 <!-- Bootstrap core JavaScript-->
+<script type="text/javascript" charset="utf-8">
+if('serviceWorker' in navigator){
+  navigator.serviceWorker.register('{{site.baseurl}}/sw.js')
+  .then(function(registration){
+  })
+  .catch(function(err){
+    console.log('Error while registering service worker', err);
+  });
+}
+</script>
 <script src="{{ site.baseurl }}/js/arphd.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
