--- a/css/hc.css
+++ b/css/hc.css
@@ -823,11 +823,7 @@ form.score legend{
   margin-left:10px;
 }
 
-form.score input[type=checkbox]{
-  margin-left: 30px;
-}
-
-form.score input[type=radio]{
+form.score input[type=radio], form.score input[type=checkbox]{
   width     : 2em;
   margin: 0 0 0 20px;
   padding   : 0;
@@ -835,13 +831,13 @@ form.score input[type=radio]{
   opacity   : 0;
 }
 
-input[type=radio]:not(old) + label{
+input[type=radio]:not(old) + label, input[type=checkbox]:not(old) + label{
   display      : inline-block;
   margin-left  : -2em;
   line-height  : 1.5em;
 }
 
-form.score input[type=radio] + label > span{
+form.score input[type=radio] + label > span, form.score input[type=checkbox] + label > span{
   display          : inline-block;
   width            : 1em;
   height           : 1em;
@@ -853,7 +849,7 @@ form.score input[type=radio] + label > span{
   vertical-align   : bottom;
 }
 
-input[type=radio]:checked + label > span > span{
+input[type=radio]:checked + label > span > span, input[type=checkbox]:checked + label > span > span{
   display          : block;
   width: 0.7em;
   height           : 0.65em;
