--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,7 @@
 <title>{{ page.title }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{ site.description }}">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link href="{{ site.baseurl }}/css/hc.css" rel="stylesheet">
-<link href="{{ site.baseurl }}/css/trombi.css" rel="stylesheet">
-<link href="{{ site.baseurl }}/css/accordion.css" rel="stylesheet">
-<!-- <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"> -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link href="{{ site.baseurl }}/css/hc.css" rel="stylesheet" type="text/css">
+<link href="{{ site.baseurl }}/css/trombi.css" rel="stylesheet" type="text/css">
+<link href="{{ site.baseurl }}/css/accordion.css" rel="stylesheet" type="text/css">
