--- a/css/trombi.css
+++ b/css/trombi.css
@@ -10,6 +10,8 @@
 .lb-album li > a,
 .lb-album li > a img{
 	display: block;
+	margin: 0;
+	max-width: 100%;
 }
 .lb-album li > a{
 	width: 150px;
@@ -29,7 +31,7 @@
 	line-height: 65px;
 	color: rgba(27,54,81,0.8);
 	text-shadow: 0px 1px 1px rgba(255,255,255,0.6);
-	font-size: 20px;
+	font-size: 17px;
 	opacity: 0;
 	filter: alpha(opacity=0); /* internet explorer */
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
@@ -114,7 +116,7 @@
 	color: #fff;
 	position: absolute;
 	top: 43px;
-	left: 50%;
+	left: 59%;
 	font-size: 15px;
 	line-height: 26px;
 	text-align: center;
@@ -174,7 +176,7 @@
 	height: auto;
 	bottom: 0px;
 	right: 0px;
-	padding: 80px 100px 120px 100px;
+	padding: 80px 100px 120px 350px;
 }
 .lb-overlay:target img,
 .lb-overlay:target a.lb-close{
