Fixes Mayo & feedback

--- a/_layouts/collapse.html
+++ b/_layouts/collapse.html
@@ -4,11 +4,11 @@ layout: default
 <h1 id={{ page.h1 | replace: ' ', '_'}}>{{ page.h1 }}</h1>
 <div>
   <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#complications" aria-controls="complications" role="tab" data-toggle="tab">Complications</a></li>
-    <li role="presentation"><a href="#inscription" aria-controls="inscription" role="tab" data-toggle="tab">Inscription à la liste d'attente</a></li>
-    <li role="presentation"><a href="#attente" aria-controls="attente" role="tab" data-toggle="tab">Phase d'attente</a></li>
+    <li role="presentation" class="active"><a href="#complications" aria-controls="complications" role="tab" data-toggle="tab">La cirrhose</a></li>
+    <li role="presentation"><a href="#inscription" aria-controls="inscription" role="tab" data-toggle="tab">L'inscription sur la liste d'attente</a></li>
+    <li role="presentation"><a href="#attente" aria-controls="attente" role="tab" data-toggle="tab">La phase d'attente</a></li>
     <li role="presentation"><a href="#appel" aria-controls="appel" role="tab" data-toggle="tab">L'appel à la greffe</a></li>
-    <li role="presentation"><a href="#suivi" aria-controls="suivi" role="tab" data-toggle="tab">Le suivi</a></li>
+    <li role="presentation"><a href="#suivi" aria-controls="suivi" role="tab" data-toggle="tab">La transplantation</a></li>
   </ul>
   <!-- Tab panes -->
   <div class="tab-content">
