--- a/_layouts/tabs.html
+++ b/_layouts/tabs.html
@@ -4,8 +4,8 @@ layout: default
 <div>
   <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active"><a href="#pregreffe" aria-controls="home" role="tab" data-toggle="tab">Bilan pré-greffe</a></li>
-    <li role="presentation"><a href="#attente" aria-controls="attente" role="tab" data-toggle="tab">Phase d'attente</a></li>
-    <li role="presentation"><a href="#operation" aria-controls="operation" role="tab" data-toggle="tab">Opération</a></li>
+    <li role="presentation"><a href="#attente" aria-controls="attente" role="tab" data-toggle="tab">Inscription et Phase d'attente</a></li>
+    <li role="presentation"><a href="#operation" aria-controls="operation" role="tab" data-toggle="tab">La greffe</a></li>
     <li role="presentation"><a href="#suivi" aria-controls="suivi" role="tab" data-toggle="tab">Suivi à long terme</a></li>
   </ul>
 
