--- a/css/accordion.css
+++ b/css/accordion.css
@@ -114,6 +114,9 @@
 .ac-container input:checked ~ ul.ac-9{
   height: 240px;
 }
+.ac-container input:checked ~ ul.ac-10{
+  height: 270px;
+}
 .ac-container ul li:before{
   content: '▶';
   font-size: 8px;
