Adds photos & credits

--- a/css/hc.css
+++ b/css/hc.css
@@ -54,7 +54,7 @@ h1
 	border-radius: 2px;
 	left: 0;
 	bottom: 0;
-	box-shadow: 
+	box-shadow:
 		0 -1px 0 rgba(0,0,0,0.1), 0 1px 0 rgba(255,255,255,0.6);
   	width: 100%;
 }
@@ -430,7 +430,7 @@ pre
   color:#00A3D9
 }
 
-.credit
+.credit, .credit > a
 {
   bottom:0;
   width:100%;
@@ -444,8 +444,8 @@ pre
   color:#cdcdcd
 }
 
-a.credit {
-  display: block;
+.credit > a {
+  margin: 0 5px;
 }
 
 .label-danger
